# sage

./: .gitignore  README.md  main.py  pyproject.toml  session_history.db  setup.py  test_api.py
extension/: package.json
extension/src/: extension.js  extension.ts  installation.js  installation.ts
extension/src/panel/: config_panel.ts  connection_panel.ts  llm_config_modal.ts  llm_panel.ts  panel.js  panel.ts  settings_modal.ts
extension/src/utils/: environment.js  server_manager.ts  settings_manager.ts
sage/: cli.py  config.py  extractor.py  main.py  server.py  setup.py  window.py
sage/api/: chat_router.py  dto.py  llm_router.py  models.py  user_router.py
sage/chat/: chat_session.py  chat_session_manager.py
sage/chat/db/: database.py  db_models.py
sage/db/: database.py  db_models.py
sage/llm/: embedding.py  embeddings.py  llm.py  llm_manager.py
sage/llm/vector_store/: vector_store.py
sage/plugins/: __init__.py  base.py  notes.py  ocr_fallback.py  safari.py
sage/utils/: logger.py  output_extraction.py
sage_extension/: extension.js  package.json
sage_extension/src/: installation.js
server/: setup.py
server/sage/: cli.py  config.py  server.py
server/sage/api/: llm_router.py
server/sage/chat/: chat_session.py
server/sage/chat/db/: database.py  db_models.py
server/sage/llm/vector_store/: retriever.py
